<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Viewer</string>
    <string name="title_activity_library">Library</string>
    <string name="action_settings">Settings</string>
    <string name="action_finish">Finish</string>
    <string name="action_access">Access Library</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_toLibrary">toLibrary</string>
    <string name="setting_library_path">Library Path</string>
    <string name="prefkey_library_path">prefkey_library_path</string>
    <string name="default_library_path">/sdcard/usbTc/</string>
    <string name="search_hint">Titles and Authors</string>
    <string name="search_title">Search</string>
    <string name="title_activity_shelf">Shelf</string>
    <string name="action_backward">Prev. Library</string>
    <string name="action_forward">Next Library</string>
    <string name="json_default_library">{"page":"library","tab":"book"}</string>
    <string name="json_default_attributes">{"attributes":{"itemType":"book","direction":"RightToLeft","searchPagenoFormat":"'[^C]\\\\d{3}'","backImagePrefix":"B","coverImagePrefix":"C","introduction":"C02","twinView":"true","mimeType":"'text\\/html'","firstPage":"index.html"}}</string>
    <string name="fname_library_json">library.json</string>
    <string name="fname_shelf_json">bookshelf.json</string>
    <string name="fname_book_json">bookinfo.json</string>
    <string name="fname_bookattr_json">bookattr.json</string>
    <string name="fname_booknote_json">booknote.json</string>
    <string name="max_search_count_in_shelf">200</string>
    <string name="min_pixel_of_backface_width">50</string>
    <string name="logical_max_height_of_backface_in_inchi">8</string>
    <string name="dpi_of_backface">200</string>
    <string name="min_move_pixel_of_fling">50</string>
    <string name="description_book_backface">Book\' Back Face</string>
    <string name="description_book_cover">Book\' Cover</string>
    <string name="title_activity_book">Book</string>
    <string name="action_toShelf">toShelf</string>
    <string name="description_page">Page</string>
    <string name="fixed_expression_image_extension">\\.([pP][nN][gG]|[jJ][pP][eE][gG]|[jJ][pP][gG])</string>
    <string name="fixed_expression_text_extension">.txt</string>
    <string name="fixed_part_backface_fname">00</string>
    <string name="fixed_part_coverfront_fname">01</string>
    <string name="fixed_part_coverrear_fname">02</string>
    <string name="fixed_part_sleevefront_fname">03</string>
    <string name="fixed_part_sleeverear_fname">04</string>
    <string name="blank_page_extension">\\.blank</string>
    <string name="limit_ratio_show_solo_in_landscape">1.1</string>
    <string name="shorter_ratio_of_width_in_landscape">0.6</string>
    <string name="blank_text"></string>
    <string name="dialog_pagejump_title">Dialog for Page Jump</string>
    <string name="dialog_pagejump_button_jump">Jump</string>
    <string name="dialog_pagejump_button_cancel">Cancel</string>
    <string name="dialog_pagejump_marks">Page Marks</string>
    <string name="title_activity_detail">Book\'s Detail</string>
    <string name="action_toBook">toBook</string>
    <string name="detail_title_title">Title</string>
    <string name="detail_title_author">Author</string>
    <string name="detail_title_publisher">Publisher</string>
    <string name="detail_title_published_date">Published Date</string>
    <string name="detail_title_curpage_name">Current Page</string>
    <string name="detail_button_mark">Mark</string>
    <string name="marklist_button_delete">Delete</string>
    <string name="blank_page_name">(blank)</string>
    
</resources>
